# rs-complete

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  rust.yml
src/: completion_tree.rs  lib.rs
