[package]
name = "rs-complete"
description = "A library that handles text/word completion"
version = "0.1.0"
authors = ["Linus Probert <linus.probert@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/liquidityc/rs-complete"
repository = "https://github.com/liquidityc/rs-complete"
documentation = "https://docs.rs/rs-complete"
license = "MIT"
keywords = ["completion", "tab-completion", "text-completion"]
categories = ["text-input", "input", "completion"]
exclude = [".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
