[package]
name = "rs-complete"
description = "A library that handles text/word completion"
version = "1.2.0"
authors = ["Linus Probert <linus.probert@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/blightmud/rs-complete"
repository = "https://github.com/blightmud/rs-complete"
documentation = "https://docs.rs/rs-complete"
license = "MIT"
keywords = ["completion", "tab-completion", "text-completion"]
categories = ["caching", "command-line-interface", "gui"]
exclude = [".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
